remove --add-open option in pom file